<resources>
    <string name="app_name">MyRun</string>
    <string name="welcome_to_myrun">Welcome to MyRun!</string>
    <string name="start_run">Start Run</string>
    <string name="start_run_button">Start Run</string>
    <string name="my_history_button_text">My History</string>
    <string name="speedValue">0 m/s</string>
    <string name="timeText">Time:</string>
    <string name="speedText">Speed:</string>
    <string name="distanceText">Distance:</string>
    <string name="distanceValue">0 m</string>
    <string name="finish_run_button">Finish Run</string>
    <string name="summaryTitle">Summary</string>
    <string name="distance_ran_text">Distance Ran:</string>
    <string name="time_text">Time:</string>
    <string name="distance_ran_value">0 m</string>
    <string name="time_value">00:00</string>
    <string name="max_speed_text">Max. Speed:</string>
    <string name="speed_value">0 m/s</string>
    <string name="name_query_text">Name this Run:</string>
    <string name="how_was_your_run_query">How was your run?</string>
    <string name="good_text">Good</string>
    <string name="bad_text">Bad</string>
    <string name="comments_query">Comments (Road, Weather etc.):</string>
    <string name="finish_text">Finish</string>
    <string name="name_your_run">Name your run</string>
    <string name="name">Name</string>
    <string name="comment_here">comment here</string>
    <string name="all_time_summary_button">all time summary</string>
    <string name="this_month_summary_button">Summary By Month</string>
    <string name="all_runs_button">all runs</string>
    <string name="total_distance_ran_text">Total Distance Ran:</string>
    <string name="highest_max_speed_text">Highest Max. Speed:</string>
    <string name="average_max_speed_text">Average Max. Speed:</string>
    <string name="total_number_of_runs_text">Total Number of Runs:</string>
    <string name="average_distance_per_run_text">Average Distance Per Run:</string>
    <string name="longest_distance_text">Longest Distance in one Run:</string>
    <string name="good_runs_taken_text">Good Runs Taken:</string>
    <string name="back_button_text">Back</string>
    <string name="total_dist">0 m</string>
    <string name="no_runs">0</string>
    <string name="avg_distance">0 m</string>
    <string name="long_distance">0 m</string>
    <string name="high_max_speed">0 m/s</string>
    <string name="avg_max_speed">0 m/s</string>
    <string name="good_runs_value">0</string>
    <string name="total_time_ran_text">Total Time Ran:</string>
    <string name="total_time_value">00h 00m 00s</string>
    <string name="avg_time_text">Average Time Per Run:</string>
    <string name="avg_time_value">00m 00s</string>
    <string name="this_month_summary_new">This Month Summary</string>
    <string name="january">January</string>
    <string name="february">february</string>
    <string name="march">March</string>
    <string name="april">april</string>
    <string name="may">may</string>
    <string name="june">june</string>
    <string name="july">july</string>
    <string name="august">august</string>
    <string name="september">september</string>
    <string name="october">october</string>
    <string name="november">november</string>
    <string name="december">december</string>
    <string name="_1">1</string>
    <string name="date">Date:</string>
    <string name="yyyy_mm_dd">yyyy-mm-dd</string>
    <string name="details_title">Details</string>
    <string name="distance_ran_details">Distance Ran:</string>
    <string name="time_details">Time:</string>
    <string name="max_speed_details">Max. Speed:</string>
    <string name="your_rating_details">Your rating:</string>
    <string name="comments_details">Comments:</string>
    <string name="max_speed_details_value">0 m/s</string>
    <string name="time_details_value">00:00</string>
    <string name="distance_details_value">0 m</string>
</resources>