<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistorySummary">

    <TextView
        android:id="@+id/HistorySummaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/summaryTitle"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HistorySummaryTitle"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/HistoryDistanceRanText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_distance_ran_text"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/TotalDistanceRanValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_dist"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/runsTakenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_number_of_runs_text"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/TotalRunsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_runs"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/averageDistanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_distance_per_run_text"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/avgDistanceValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/avg_distance"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/longestDistanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longest_distance_text"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/longestDistanceValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/long_distance"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/highestMaxSpeedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highest_max_speed_text"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/HighestMaxSpeedValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/high_max_speed"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/avgMaxSpeedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_max_speed_text"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/avgMaxSpeedValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/avg_max_speed"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/GoodRunsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_runs_taken_text"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/GoodRunsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/good_runs_value"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:onClick="clickFinish"
        android:text="@string/back_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TotalTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_time_ran_text"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/totalTimeValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_time_value"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="-185dp"
            tools:layout_editor_absoluteY="538dp">

            <TextView
                android:id="@+id/avgTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_time_text"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/avgTimeValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/avg_time_value"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>